--- a/Readme
+++ b/Readme
@@ -1,7 +1,7 @@
 Race On
 
 "Open Race On.exe to play"
-Works on Windows 64-bit systems only.
+Works on Windows 64-bit systems and Linux with Wine installed.
 
 
 Developed by:
@@ -9,7 +9,4 @@ Viraj Chavan
 Varun Maheshwari
 Shubham Hapse
 
-Contact:
-virajc@live.com
-8975201655
 
