--- a/Readme
+++ b/Readme
@@ -1,4 +1,5 @@
-Race On
+Race On:  A 3d vido game developed using Blender Game Engine
+3 levels.
 
 "Open Race On.exe to play"
 Works on Windows 64-bit systems and Linux with Wine installed.
